fix: dashboard (announcement) overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -213,7 +213,17 @@ h1 {
 .tox-statusbar__branding {
     display: none;
 }
-
+.css-is-awesome {
+    border: 1px solid #e7e7e7;
+    border-radius: 12px;
+    margin-top: 10px;
+    overflow-wrap: break-word !important;
+    width: 100%;
+    padding: 15px;
+}
+.css-is-awesome > * {
+    overflow: auto;
+}
 @media only screen and (max-width: 600px) {
     #calendar {
       font-size: 12px;
